--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,8 @@
 {
     "files.associations": {
-        "algorithm": "cpp",
-        "random": "cpp",
+        "xstring": "cpp",
         "iostream": "cpp",
-        "*.tcc": "cpp",
-        "ostream": "cpp",
-        "type_traits": "cpp"
+        "string": "cpp",
+        "ostream": "cpp"
     }
 }
